# xiaomi_player

./: MusicProviderJellyfin.py  MusicProviderLocalFile.py  README.md  jellyfin.cred.json  main.py  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
