[project]
name = "xiaomi-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "flask>=3.1.1",
    "jellyfin-apiclient-python>=1.11.0",
    "loguru>=0.7.3",
]

[tool.uv.sources]
jellyfin-apiclient-python = { git = "https://github.com/jellyfin/jellyfin-apiclient-python.git" }
